--- a/tentang.html
+++ b/tentang.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Tentang Kami | faklahskin store</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>𝑭𝑲𝑳𝑯 𝑺𝒌𝒊𝒏𝒔</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,11 +18,22 @@
         <li><a href="produk.html">Produk</a></li>
         <li><a href="tentang.html">Tentang</a></li>
         <li><a href="kontak.html">Kontak</a></li>
+        <a href="keranjang.html" style="position: relative;">
+              🛒 <span id="keranjang-count" style="
+                background: red;
+                color: white;
+                border-radius: 50%;
+                padding: 2px 6px;
+                font-size: 12px;
+                position: absolute;
+                top: -10px;
+                right: -10px;
+              ">0</span>
+            </a>
       </ul>
     </nav>
   </div>
 </header>
-
  <section class="tentang container">
     <h2 class="tentang-title">Tentang Kami</h2>
     <p class="tentang-text">
@@ -35,12 +48,11 @@
       <strong>Dengan semangat inovasi dan pelayanan terbaik</strong>, kami terus berkembang menjadi penyedia garskin dan aksesoris futuristik yang modern, elegan, dan relevan dengan tren saat ini.
     </p>
   </section>
-
+  <script src="beli.js"></script>
   <footer>
     <div class="container">
       <p>&copy; 2025 FKLH SKINS</p>
     </div>
   </footer>
-
 </body>
 </html>
